# nes-studio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Shuttle.toml  justfile
.github/workflows/: CI.yml  Shuttle.yml
nes-studio/: Cargo.toml
nes-studio-app/: Cargo.toml  index.html
nes-studio-app/assets/: sw.js
nes-studio-app/src/: app.rs  main.rs
nes-studio-website/: Cargo.toml
nes-studio-website/src/: main.rs
nes-studio/src/: main.rs
scripts/: prepare_dist_sw_js.py
