[package]
name = "nes-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
shuttle-axum = "0.29"
shuttle-runtime = "0.29"
tokio = "1.28"
tower = { version = "0.4", features = ["tracing"] }
tower-http = { version = "0.4", features = ["fs", "trace", "compression-full", "normalize-path"] }